<resources>

    <!-- Main strings -->
    <string name="app_name">Musicians Assistant</string>
    <string name="title_section_metronome">Metronome</string>
    <string name="title_section_tone">Tone Generator</string>
    <string name="title_section_tuner">Tuner</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MA</string>
    <string name="image">Image</string>
    <string name="header">Control by touch.</string>

    <!-- Global options -->
    <string name="setup_global">Global setup</string>
    
    <string name="setup_color_title">Choose gradient</string>
    <string name="pref_color_title">Background</string>
    <string name="pref_color">set up background</string>
    
    <string name="pref_notify_title">Notifications</string>
    <string name="pref_notify">Enable notifications</string>
    
    <string name="pref_orientation_title">Lock rotation</string>
    <string name="pref_orientation">Enable to lock the portraite mode</string>

    <!-- Metronome -->
    <string name="setup_metronome">Metronome setup</string>
    <string name="setup_sound_title">Choose sound</string>
    <string name="pref_sound_title">Tick-tack sound</string>
    <string name="pref_sound">Choose from the predefined sounds</string>
    
    <!-- Configuration keys -->
    <string name="pref_key_bg">background_update_flag</string>
    <string name="pref_key_sound">sound_update_flag</string>
    <string name="pref_key_orientation">orientation_update_flag</string>
    <string name="pref_key_notify">notify_update_flag</string>
</resources>