<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setup_metronome" >
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/setup_sound_title"
            android:entries="@array/sounds"
            android:entryValues="@array/sounds_values"
            android:key="@string/pref_key_sound"
            android:summary="@string/pref_sound"
            android:title="@string/pref_sound_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/setup_global" >
        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/setup_color_title"
            android:entries="@array/bgColors"
            android:entryValues="@array/bgColors_values"
            android:key="@string/pref_key_bg"
            android:summary="@string/pref_color"
            android:title="@string/pref_color_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notify"
            android:summary="@string/pref_notify"
            android:title="@string/pref_notify_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_orientation"
            android:summary="@string/pref_orientation"
            android:title="@string/pref_orientation_title" />
    </PreferenceCategory>

</PreferenceScreen>